package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

# TODO: Probably need kmod also
container_image(
    name = "scaler",
    base = "@debian_base_amd64//image",
    cmd = "/scaler",
    directory = "/",
    files = [
        "//cmd/scaler",
    ],
)
