package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)

container_image(
    name = "scaler",
    base = "@debian_base_amd64//image",
    cmd = "/scaler",
    directory = "/",
    files = [
        "//cmd/scaler",
    ],
)

container_push(
    name = "push-scaler",
    format = "Docker",
    image = ":scaler",
    registry = "index.docker.io",
    repository = "{STABLE_DOCKER_REGISTRY}/scaler",
    stamp = True,
    tag = "{STABLE_DOCKER_TAG}",
)
