package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)

# TODO: Probably need kmod also
container_image(
    name = "scaler",
    base = "@debian_base_amd64//image",
    cmd = "/scaler",
    directory = "/",
    files = [
        "//cmd/scaler",
    ],
)

container_push(
   name = "push-scaler",
   image = ":scaler",
   format = "Docker",
   registry = "{STABLE_DOCKER_REGISTRY}",
   repository = "{STABLE_DOCKER_IMAGE_PREFIX}scaler",
   stamp = True,
   tag = "{STABLE_DOCKER_TAG}",
)
