load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/justinsb/scaler/cmd/scaler",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/scaler/options:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/control:go_default_library",
        "//pkg/signals:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
    ],
)

go_binary(
    name = "scaler",
    importpath = "github.com/justinsb/scaler/cmd/scaler",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
