load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "controller.go",
        "policy.go",
        "state.go",
    ],
    importpath = "github.com/justinsb/scaler/pkg/control",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/scaler/options:go_default_library",
        "//pkg/apis/scalingpolicy/v1alpha1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/client/listers/scalingpolicy/v1alpha1:go_default_library",
        "//pkg/control/k8sclient:go_default_library",
        "//pkg/debug:go_default_library",
        "//pkg/factors:go_default_library",
        "//pkg/factors/kubernetes:go_default_library",
        "//pkg/factors/static:go_default_library",
        "//pkg/graph:go_default_library",
        "//pkg/http:go_default_library",
        "//pkg/scaling:go_default_library",
        "//pkg/scaling/smoothing:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/record:go_default_library",
        "//vendor/k8s.io/client-go/util/workqueue:go_default_library",
    ],
)
