load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "compute.go",
        "histogram.go",
        "quantization.go",
        "smoothing.go",
        "unsmoothed.go",
    ],
    importpath = "github.com/justinsb/scaler/pkg/scaling",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/scalingpolicy/v1alpha1:go_default_library",
        "//pkg/debug:go_default_library",
        "//pkg/factors:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "compute_test.go",
        "quantization_test.go",
    ],
    importpath = "github.com/justinsb/scaler/pkg/scaling",
    library = ":go_default_library",
    deps = [
        "//pkg/apis/scalingpolicy/v1alpha1:go_default_library",
        "//pkg/debug:go_default_library",
        "//pkg/factors/static:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/equality:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
    ],
)
