load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "signal.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "signal_posix.go",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "signal_posix.go",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "signal_windows.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/justinsb/scaler/pkg/signals",
    visibility = ["//visibility:public"],
)
