load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["monotonic.go"],
    importpath = "github.com/justinsb/scaler/pkg/timeutil",
    visibility = ["//visibility:public"],
    deps = ["//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library"],
)
