load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "graph.html.go",
        "graphlist.html.go",
        "simulate.go",
        "simulatelist.go",
    ],
    importpath = "github.com/justinsb/scaler/webapp/templates",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/graph:go_default_library",
        "//pkg/simulate:go_default_library",
    ],
)
