load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["polling.go"],
    importpath = "github.com/justinsb/scaler/pkg/factors/kubernetes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/factors:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
    ],
)
