load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["polling.go"],
    importpath = "github.com/justinsb/scaler/pkg/factors/kubernetes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/control/target:go_default_library",
        "//pkg/factors:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
    ],
)
