load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "factory.go",
        "histogram.go",
        "interfaces.go",
        "noop.go",
        "percentile.go",
    ],
    importpath = "github.com/justinsb/scaler/pkg/scaling/smoothing",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/scalingpolicy/v1alpha1:go_default_library",
        "//pkg/http:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
    ],
)
