load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "example.go",
        "expansion_generated.go",
    ],
    importpath = "github.com/justinsb/scaler/pkg/client/listers/scalingpolicy/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/scalingpolicy/v1alpha1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
